Fix nav spacing issue

--- a/src/napari_sphinx_theme/assets/scss/global.scss
+++ b/src/napari_sphinx_theme/assets/scss/global.scss
@@ -22,11 +22,11 @@ html {
 }
 
 body {
-  @apply tw-flex tw-flex-col;
+  @apply tw-flex tw-flex-col tw-pt-16;
 }
 
 .napari-page {
-  @apply tw-grid tw-justify-center tw-gap-6 tw-pt-12 tw-flex-auto;
+  @apply tw-grid tw-justify-center tw-gap-6 tw-mt-12 tw-flex-auto;
 
   grid-template-columns: 1fr;
 
