--- a/src/napari_sphinx_theme/assets/styles/_announcement.scss
+++ b/src/napari_sphinx_theme/assets/styles/_announcement.scss
@@ -4,7 +4,6 @@
   display: flex;
   font-weight: bold;
   justify-content: center;
-  margin-top: 64px;
   padding: 16px;
   position: relative;
   text-align: center;
